--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <script src="index.js"></script>
+    <!-- #3: Import external libraries here -->
     <!-- #2.3: Import Animate.css style library-->
     <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <script src="index.js"></script>
-    <!-- #3: Import external libraries here -->
-    <!-- #2.5.: Import Plotly -->
+    <!-- #2.5.: Import Plotly 
+      Plotly not working for some reason?? -->
     <script src="https://cdn.plot.ly/plotly-2.11.1.min.js"></script>
 
     
@@ -30,8 +31,10 @@
       COVID Cases at US Universities
     </header>
     <main>
-        <!-- #2.4: Add bounce effect to notice with animate.css --> 
-      <div id="notice" class="animate__animated animate__bounce">
+        <!-- #2.4: Add bounce effect to notice with animate.css 
+        <div id="notice" class="animate__animated animate__bounce"> 
+        bounce animation breaks the hover.... --> 
+      <div id="notice">
         <span id="case-date-update">
           Case data updated as of October 22, 2020
         </span>
