--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <!-- #2.5.: Import Plotly 
-      Plotly not working for some reason?? -->
-    <script src="https://cdn.plot.ly/plotly-2.11.1.min.js"></script>
+    <!-- #2.5.: Import Plotly -->
+      <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-    
   </head>
 
   <body>
@@ -31,10 +29,8 @@
       COVID Cases at US Universities
     </header>
     <main>
-        <!-- #2.4: Add bounce effect to notice with animate.css 
-        <div id="notice" class="animate__animated animate__bounce"> 
-        bounce animation breaks the hover.... --> 
-      <div id="notice">
+        <!-- #2.4: Add bounce effect to notice with animate.css!-->
+        <div id="notice" class="animate__animated animate__bounce">
         <span id="case-date-update">
           Case data updated as of October 22, 2020
         </span>
